# wgpu-linear-cosine-lighting

./: Cargo.toml  build-wasm.bat  index.html
.github/workflows/: deploy-wasm.yml
src/: app.rs  bin.rs  lib.rs  ltc_lut.rs  shader.wgsl
